Fix moving plug list to motherboard IO Config

--- a/pyscada/laborem/templates/DUT_selector.html
+++ b/pyscada/laborem/templates/DUT_selector.html
@@ -1,57 +1,57 @@
 {% load i18n staticfiles %}
 <br><br><br>Liste des montages :<br>
-{% if not dut_selector.plug1 and not dut_selector.plug2 and not dut_selector.plug3 and not dut_selector.plug4 and not dut_selector.plug5 and not dut_selector.plug6 and not dut_selector.plug7 and not dut_selector.plug8 and not dut_selector.plug9 and not dut_selector.plug10 and not dut_selector.plug11 and not dut_selector.plug12 and not dut_selector.plug13 and not dut_selector.plug14 and not dut_selector.plug15 and not dut_selector.plug16 %}
+{% if not dut_selector.MotherboardIOConfig.plug1 and not dut_selector.MotherboardIOConfig.plug2 and not dut_selector.MotherboardIOConfig.plug3 and not dut_selector.MotherboardIOConfig.plug4 and not dut_selector.MotherboardIOConfig.plug5 and not dut_selector.MotherboardIOConfig.plug6 and not dut_selector.MotherboardIOConfig.plug7 and not dut_selector.MotherboardIOConfig.plug8 and not dut_selector.MotherboardIOConfig.plug9 and not dut_selector.MotherboardIOConfig.plug10 and not dut_selector.MotherboardIOConfig.plug11 and not dut_selector.MotherboardIOConfig.plug12 and not dut_selector.MotherboardIOConfig.plug13 and not dut_selector.MotherboardIOConfig.plug14 and not dut_selector.MotherboardIOConfig.plug15 and not dut_selector.MotherboardIOConfig.plug16 %}
     No plug config
 {% else %}
     <div class="col-md-6"><img src="{% static 'pyscada/laborem/img/select_filter.jpg' %}" class="img-plug img-responsive" alt="Select a Device Under Test" data-img="{% static 'pyscada/laborem/img/select_filter.jpg' %}"></div>
     <div class="list-group list-dut col-md-6" id="ListPlugs">
-        {% if dut_selector.plug1 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug1 plug_id="1" %}
+        {% if dut_selector.MotherboardIOConfig.plug1 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug1 plug_id="1" %}
         {% endif %}
-        {% if dut_selector.plug2 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug2 plug_id="2" %}
+        {% if dut_selector.MotherboardIOConfig.plug2 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug2 plug_id="2" %}
         {% endif %}
-        {% if dut_selector.plug3 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug3 plug_id="3" %}
+        {% if dut_selector.MotherboardIOConfig.plug3 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug3 plug_id="3" %}
         {% endif %}
-        {% if dut_selector.plug4 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug4 plug_id="4" %}
+        {% if dut_selector.MotherboardIOConfig.plug4 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug4 plug_id="4" %}
         {% endif %}
-        {% if dut_selector.plug5 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug5 plug_id="5" %}
+        {% if dut_selector.MotherboardIOConfig.plug5 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug5 plug_id="5" %}
         {% endif %}
-        {% if dut_selector.plug6 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug6 plug_id="6" %}
+        {% if dut_selector.MotherboardIOConfig.plug6 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug6 plug_id="6" %}
         {% endif %}
-        {% if dut_selector.plug7 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug7 plug_id="7" %}
+        {% if dut_selector.MotherboardIOConfig.plug7 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug7 plug_id="7" %}
         {% endif %}
-        {% if dut_selector.plug8 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug8 plug_id="8" %}
+        {% if dut_selector.MotherboardIOConfig.plug8 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug8 plug_id="8" %}
         {% endif %}
-        {% if dut_selector.plug9 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug9 plug_id="9" %}
+        {% if dut_selector.MotherboardIOConfig.plug9 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug9 plug_id="9" %}
         {% endif %}
-        {% if dut_selector.plug10 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug10 plug_id="10" %}
+        {% if dut_selector.MotherboardIOConfig.plug10 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug10 plug_id="10" %}
         {% endif %}
-        {% if dut_selector.plug11 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug11 plug_id="11" %}
+        {% if dut_selector.MotherboardIOConfig.plug11 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug11 plug_id="11" %}
         {% endif %}
-        {% if dut_selector.plug12 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug12 plug_id="12" %}
+        {% if dut_selector.MotherboardIOConfig.plug12 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug12 plug_id="12" %}
         {% endif %}
-        {% if dut_selector.plug13 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug13 plug_id="13" %}
+        {% if dut_selector.MotherboardIOConfig.plug13 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug13 plug_id="13" %}
         {% endif %}
-        {% if dut_selector.plug14 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug14 plug_id="14" %}
+        {% if dut_selector.MotherboardIOConfig.plug14 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug14 plug_id="14" %}
         {% endif %}
-        {% if dut_selector.plug15 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug15 plug_id="15" %}
+        {% if dut_selector.MotherboardIOConfig.plug15 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug15 plug_id="15" %}
         {% endif %}
-        {% if dut_selector.plug16 %}
-            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug16 plug_id="16" %}
+        {% if dut_selector.MotherboardIOConfig.plug16 %}
+            {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug16 plug_id="16" %}
         {% endif %}
     </div>
 {% endif %}
