--- a/pyscada/laborem/templates/base_laborem.html
+++ b/pyscada/laborem/templates/base_laborem.html
@@ -44,7 +44,7 @@
                             {% if user.pk %}
                             <li class="dropdown"><!-- User -->
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon  glyphicon-user"></span> {% if user.first_name %}{{ user.first_name }} {{ user.last_name }}{% else %}{{ user.username }}{% endif %}<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu" style="background-color: white;">
                                     {% if user.is_staff %}
                                     <li><a href="{% url 'pyscada_admin:index' %}" target="{{ link_target }}">Admin</a></li>
                                     <li class="divider"></li>
