--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -178,7 +178,7 @@
           </div>
           <div class="modal-body">
             <div class="row">
-                <div class="message-laborem">
+                <div class="message-laborem" data-timestamp="0">
                     <h2>Nothing to say</h2>
                     <div class="progress" style="width:50%; margin-left: auto; margin-right: auto;">
                         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;width:100%">100%</div>
