Commit migration file

--- a/pyscada/laborem/templates/base_laborem.html
+++ b/pyscada/laborem/templates/base_laborem.html
@@ -36,7 +36,7 @@
                         <a  class="navbar-brand" target="_blank" href="{% url 'view-overview'%}">PyScada</a>
                     </div>
                     <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
+                        <ul class="nav navbar-left navbar-nav">
                             {% block top_menu_left %}{% endblock %}
                         </ul>
                         <ul class="nav navbar-right navbar-nav">
