--- a/pyscada/laborem/templates/robot_selector.html
+++ b/pyscada/laborem/templates/robot_selector.html
@@ -1,5 +1,5 @@
-Composant {{ base.description }} :<br>
-<div class="dropdown dropdown-robot col-md-2" id="{{ base.pk }}">
+<div class="dropdown dropdown-robot" id="{{ base.pk }}">
+    Composant {{ base.description }} :<br>
     {% if base.description == "vert" %}
         <button class="btn btn-success dropdown-toggle dropdown-robot-btn" type="button" data-toggle="dropdown">
     {% elif base.description == "rouge" %}
