--- a/pyscada/laborem/templates/view_laborem_overview.html
+++ b/pyscada/laborem/templates/view_laborem_overview.html
@@ -7,7 +7,7 @@
         {% if view.visible %}
         <div class="col-sm-3">
         <div class="panel panel-default">
-            {% if view.link_title == "laborem" %}
+            {% if "laborem" in view.link_title %}
                 <div class="panel-heading">
                     <h3 class="panel-title"><a href="{% url 'main-laborem-view' view.link_title %}" target="_blank" >{{ view.title }}</a></h3>
                 </div>
