--- a/pyscada/laborem/templates/DUT_selector.html
+++ b/pyscada/laborem/templates/DUT_selector.html
@@ -1,9 +1,8 @@
 {% load i18n staticfiles %}
-<br><br><br>Liste des montages :<br>
+<br><br><br>Liste des circuits :<br><br>
 {% if not dut_selector.MotherboardIOConfig.plug1 and not dut_selector.MotherboardIOConfig.plug2 and not dut_selector.MotherboardIOConfig.plug3 and not dut_selector.MotherboardIOConfig.plug4 and not dut_selector.MotherboardIOConfig.plug5 and not dut_selector.MotherboardIOConfig.plug6 and not dut_selector.MotherboardIOConfig.plug7 and not dut_selector.MotherboardIOConfig.plug8 and not dut_selector.MotherboardIOConfig.plug9 and not dut_selector.MotherboardIOConfig.plug10 and not dut_selector.MotherboardIOConfig.plug11 and not dut_selector.MotherboardIOConfig.plug12 and not dut_selector.MotherboardIOConfig.plug13 and not dut_selector.MotherboardIOConfig.plug14 and not dut_selector.MotherboardIOConfig.plug15 and not dut_selector.MotherboardIOConfig.plug16 %}
     No plug config
 {% else %}
-    <div class="col-md-6"><img src="{% static 'pyscada/laborem/img/select_filter.jpg' %}" class="img-plug img-responsive" alt="Select a Device Under Test" data-img="{% static 'pyscada/laborem/img/select_filter.jpg' %}"></div>
     <div class="list-group list-dut col-md-6" id="ListPlugs">
         {% if dut_selector.MotherboardIOConfig.plug1 %}
             {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug1 plug_id="1" %}
@@ -54,4 +53,5 @@
             {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.MotherboardIOConfig.plug16 plug_id="16" %}
         {% endif %}
     </div>
+    <img style="display: none;" src="{% static 'pyscada/laborem/img/select_filter.jpg' %}" class="img-plug img-responsive" alt="Select a Device Under Test" data-img="{% static 'pyscada/laborem/img/select_filter.jpg' %}">
 {% endif %}
