--- a/pyscada/laborem/templates/base_laborem.html
+++ b/pyscada/laborem/templates/base_laborem.html
@@ -9,15 +9,18 @@
         
         <title>{% block title %}{% endblock %}</title>
         <!-- Bootstrap core CSS -->
-        <link href="{% static "pyscada/css/bootstrap.css" %}" rel="stylesheet"/>
+        <link href="{% static "pyscada/css/bootstrap/bootstrap.min.css" %}" rel="stylesheet"/>
         <!-- Bootstrap theme -->
-        <link href="{% static "pyscada/css/bootstrap-theme.min.css" %}" rel="stylesheet"/>
+        <link href="{% static "pyscada/css/bootstrap/bootstrap-theme.min.css" %}" rel="stylesheet"/>
         <!-- Bootstrap theme -->
         <link href="{% static "pyscada/css/jquery-ui/jquery-ui.min.css" %}" rel="stylesheet"/>
         <!-- Bootstrap theme -->
         <link href="{% static "pyscada/css/jquery-ui/jquery-ui.theme.min.css" %}" rel="stylesheet"/>
         <!-- Custom styles for this template -->    
-        <link href="{% static "pyscada/css/pyscada-theme.css" %}" rel="stylesheet"/>
+        <link href="{% static "pyscada/css/pyscada/pyscada-theme.css" %}" rel="stylesheet"/>
+        <!-- TempusDominus theme -->
+        <link href="{% static "pyscada/css/tempusdominus-bootstrap-3.min.css" %}" rel="stylesheet"/>
+        <!-- Laborem styles -->
         <link href="{% static "pyscada/laborem/css/pyscada-laborem-theme.css" %}" rel="stylesheet"/>
         <link rel="icon" href="{% static "pyscada/img/favicon.ico" %}" type="image/x-icon">
     </head>
@@ -33,18 +36,19 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a  class="navbar-brand" target="_blank" href="{% url 'view-overview'%}">PyScada</a>
+                        <a  class="navbar-brand" target="{{ link_target }}" href="{% url 'view-overview'%}">PyScada</a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-left navbar-nav">
                             {% block top_menu_left %}{% endblock %}
+                            {% block top_menu_left_collapsed %}{% endblock %}
                         </ul>
                         <ul class="nav navbar-right navbar-nav">
                             {% block top_menu_right %}{% endblock %}
                             {% if user.pk %}
                             <li class="dropdown"><!-- User -->
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon  glyphicon-user"></span> {% if user.first_name %}{{ user.first_name }} {{ user.last_name }}{% else %}{{ user.username }}{% endif %}<b class="caret"></b></a>
-                                <ul class="dropdown-menu" style="background-color: white;">
+                                <ul class="dropdown-menu" style="min-width: 0px;">
                                     {% if user.is_staff %}
                                     <li><a href="{% url 'pyscada_admin:index' %}" target="{{ link_target }}">Admin</a></li>
                                     <li class="divider"></li>
@@ -53,14 +57,20 @@
                                     <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">{{ user.email }}</a></li>
                                     <li role="presentation" class="disabled hidden"><a role="menuitem" tabindex="-1" href="#">change user info</a></li>
                                     <li class="divider hidden"></li>
-                                    <li class="disabled hidden"><a href="/accounts/password_change" target="_blank"> change password</a></li>
+                                    <li class="disabled hidden"><a href="/accounts/password_change" target="{{ link_target }}"> change password</a></li>
                                     <li class="divider"></li>
                                     <li><a href="/accounts/logout"> logout</a></li>
                                 </ul>
                             </li>
                             {% endif %}
                             <!--<li><a href="#page-help">Help</a></li>-->
-                            <li style="width:40px;"><a href="#" ><span id="AutoUpdateStatus" class="glyphicon glyphicon-transfer"></span></a></li>
+                            <li><a href="javascript:;" style="padding-left:0px; padding-right:0px;"><img id="loadingAnimation" style="display: inline-block; height: 14px;" src="/static/pyscada/img/load.gif" alt="loading" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Initialisation"></a></li>
+                            <li style="width:40px;height:30px;">
+                                <a href="javascript:;" ><span id="AutoUpdateButton" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Auto update data ON" class="glyphicon glyphicon-pause" ></span></a>
+                            </li>
+                            <li style="width:40px;height:40px;">
+                                <a href="javascript:;" ><span id="AutoUpdateStatus" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Data transfer" class="glyphicon glyphicon-transfer"></span></a>
+                            </li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -68,6 +78,7 @@
             <div class="container" id="content">
                 {% block top_area %}{% endblock %}
                 <!-- loading animation -->
+                <div id="notification_area"></div>
                 <div id="notification_area_2"></div>
                 {% block content %}{% endblock %}
             </div> <!-- /container -->
@@ -81,10 +92,12 @@
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script type="text/javascript" src="{% static "pyscada/js/jquery.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "pyscada/js/jquery/jquery.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "pyscada/js/moment-with-locales.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "pyscada/js/tempusdominus-bootstrap-3.min.js" %}"></script>
         <script type="text/javascript" src="{% static "pyscada/js/jquery-ui/jquery-ui.js" %}"></script>
-        <script type="text/javascript" src="{% static "pyscada/js/jquery.cookie.js" %}"></script>
-        <script type="text/javascript" src="{% static "pyscada/js/bootstrap.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "pyscada/js/jquery/jquery.cookie.js" %}"></script>
+        <script type="text/javascript" src="{% static "pyscada/js/bootstrap/bootstrap.min.js" %}"></script>
         {% block include_bootom %}{% endblock %}
         
         <script>
