--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -133,7 +133,7 @@
         </div>
     </div>
     {{pages_html|safe}}
-    <div id="page-log" class="sub-page" >
+    <div id="page-log" class="sub-page" style="display: none;">
         <table id="log-table" class="table table-condensed table-hover tablesorter tablesorter-default" width="100%">
             <colgroup>
                 <col style="width: 180px;">
@@ -165,8 +165,8 @@
     <div class="camera side-menu left hidden">
         <ul class="status-panel">
             <li>Camera</li>
-            <img class="camera-img usb-camera" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/camera/?action=stream">
-            <img class="camera-img pi-camera" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/picamera/stream.mjpg">
+            <img class="camera-img usb-camera" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/camera/?action=stream">
+            <img class="camera-img pi-camera" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/picamera/stream.mjpg">
         </ul>
     </div>
     <div class="summary side-menu right hidden col-md-3" style="width: 300px; list-style: circle;">
@@ -208,10 +208,10 @@
                     <ul class="status-panel">
                         <li class="col-md-2">Camera</li>
                         <br>
-                        <img class="camera-img usb-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/camera/?action=stream">
-                        <img class="camera-img pi-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/picamera/stream.mjpg">
-                        <img class="camera-img usb-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" alt="Camera view" data-src="/motionpicam/stream.mjpg">
-                        <img class="camera-img pi-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" alt="Camera view" data-src="/motionpicam/stream2.mjpg">
+                        <img class="camera-img usb-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/camera/?action=stream">
+                        <img class="camera-img pi-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/picamera/stream.mjpg">
+                        <img class="camera-img usb-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" alt="Camera view" data-src="/motionpicam/stream.mjpg">
+                        <img class="camera-img pi-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" alt="Camera view" data-src="/motionpicam/stream2.mjpg">
                     </ul>
                 </div>
                 <div class="summary-modal col-md-6">
@@ -261,8 +261,8 @@
                     <ul class="status-panel">
                         <li class="col-md-2">Caméra</li>
                         <br>
-                        <img class="camera-img usb-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/camera/?action=stream">
-                        <img class="camera-img pi-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/picamera/stream.mjpg">
+                        <img class="camera-img usb-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/camera/?action=stream">
+                        <img class="camera-img pi-camera col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" data-loaded=1 onload="$(this).attr('data-loaded', 1)" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view" data-src="/picamera/stream.mjpg">
                     </ul>
                 </div>
                 <div class="summary-modal col-md-6">
@@ -321,18 +321,7 @@
 
             // Load camera image
             window.onload = function() {
-                function updateImage() {
-                    $.each($('.camera-img'),function(key,val){
-                        if ($(this).is(':visible')) {
-                            if ($(this).attr("src") !== $(this).data("src")) {
-                                $(this).attr("src",$(this).data("src"));
-                            }
-                        }else {
-                            $(this).attr("src","");
-                        }
-                    })
-                }
-                setInterval(updateImage, 3000);
+                setInterval(updateImage, 1000);
             }
 
             // hide all pages
