--- a/pyscada/laborem/templates/view_laborem_overview.html
+++ b/pyscada/laborem/templates/view_laborem_overview.html
@@ -19,13 +19,13 @@
                 {% endif %}
             {% else %}
                 <div class="panel-heading">
-                    <h3 class="panel-title"><a href="{% url 'main-view' view.link_title %}" target="_blank" >{{ view.title }}</a></h3>
+                    <h3 class="panel-title"><a href="{% url 'main-view' view.link_title %}" target="{{ link_target }}" >{{ view.title }}</a></h3>
                 </div>
                 <div class="panel-body">
                 {% if view.logo %}
-                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="_blank" ><img src="{{ view.logo.url }}" alt="{{ view.description }}"  width="100%" ></a>
+                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="{{ link_target }}" ><img src="{{ view.logo.url }}" alt="{{ view.description }}"  width="100%" ></a>
                 {% else %}
-                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="_blank" ><p style="min-height: 120px;">{{ view.description }}</p></a>
+                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="{{ link_target }}" ><p style="min-height: 120px;">{{ view.description }}</p></a>
                 {% endif %}
             {% endif %}
             </div>
