--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -282,7 +282,7 @@
     </div>
 {% endblock %}
 {% block include_bootom %}
-<script type="text/javascript" src="{% static "pyscada/js/jquery.tablesorter.min.js" %}"></script>
+<script type="text/javascript" src="{% static "pyscada/js/jquery/jquery.tablesorter.min.js" %}"></script>
 
 <script language="javascript" type="text/javascript" src="{% static "pyscada/js/flot/lib/jquery.mousewheel.js" %}"></script>
 <script language="javascript" type="text/javascript" src="{% static "pyscada/js/flot/source/jquery.canvaswrapper.js" %}"></script>
