replace base_laborem.html with block files some fixes

--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -1,4 +1,4 @@
-{% extends "base_laborem.html" %}
+{% extends "base.html" %}
 {% load i18n staticfiles %}
 
 {% block title %}{{ view_title }} - PyScada-Laborem Control Center{% endblock %}
