--- a/pyscada/laborem/templates/view_laborem_overview.html
+++ b/pyscada/laborem/templates/view_laborem_overview.html
@@ -43,5 +43,7 @@
             // Handler for .ready() called.
            $("#loadingAnimation").hide();
            $("#AutoUpdateStatus").hide();
+           $("#ReadAllTask").hide();
+           $("#AutoUpdateButton").hide();
         });
 {% endblock %}
