--- a/pyscada/laborem/templates/DUT.html
+++ b/pyscada/laborem/templates/DUT.html
@@ -2,9 +2,9 @@
 {% if plug.laboremsubplugdevice_set.count %}
     {% for sub_plug in plug.laboremsubplugdevice_set.all %}
         {% if plug.plug_image %}
-            <a href="javascript:;" class="list-group-item list-dut-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-sub-plug-id="{{ sub_plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }} {{ sub_plug.sub_name }}
+            <a href="javascript:;" class="list-group-item list-dut-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-sub-plug-id="{{ sub_plug.id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }} {{ sub_plug.sub_name }}
         {% else %}
-            <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% static 'pyscada/laborem/img/no_img.jpg' %}" data-motherboard-id="{{ dut_selector.pk }}" data-sub-plug-id="{{ sub_plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }} {{ sub_plug.sub_name }}
+            <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% static 'pyscada/laborem/img/no_img.jpg' %}" data-motherboard-id="{{ dut_selector.pk }}" data-sub-plug-id="{{ sub_plug.id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }} {{ sub_plug.sub_name }}
         {% endif %}
         {% if plug.get_level_display == "beginner" %}
             <span class="badge level" style="background-color: #34D942">Débutant</span>
