--- a/pyscada/laborem/templates/DUT.html
+++ b/pyscada/laborem/templates/DUT.html
@@ -1,11 +1,7 @@
 {% load i18n staticfiles %}
 {% if plug.laboremsubplugdevice_set.count %}
     {% for sub_plug in plug.laboremsubplugdevice_set.all %}
-        {% if plug.plug_image %}
-            <a href="javascript:;" class="list-group-item list-dut-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-sub-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }}{{ sub_plug.sub_name }}
-        {% else %}
-            <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% static 'pyscada/laborem/img/no_img.jpg' %}" data-motherboard-id="{{ dut_selector.pk }}" data-sub-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }}{{ sub_plug.sub_name }}
-        {% endif %}
+        <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% if sub_plug.sub_plug_image %}{{ sub_plug.sub_plug_image.url }}{% elif plug.plug_image %}{{ plug.plug_image.url }}{% else %}{% static 'pyscada/laborem/img/no_img.jpg' %}{% endif %}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-sub-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }}{{ sub_plug.sub_name }}
         {% if plug.get_level_display == "beginner" %}
             <span class="badge level" style="background-color: #34D942">Débutant</span>
         {% elif plug.get_level_display == "intermediate" %}
@@ -20,11 +16,7 @@
         </a>
     {% endfor %}
 {% else %}
-    {% if plug.plug_image %}
-        <a href="javascript:;" class="list-group-item list-dut-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-sub-plug-id="0" data-plug-name="{{ plug.name|upper }}">{{ plug.name }}
-    {% else %}
-        <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% static 'pyscada/laborem/img/no_img.jpg' %}" data-motherboard-id="{{ dut_selector.pk }}" data-sub-plug-id="0" data-plug-name="{{ plug.name|upper }}">{{ plug.name }}
-    {% endif %}
+    <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% if plug.plug_image %}{{ plug.plug_image.url }}{% else %}{% static 'pyscada/laborem/img/no_img.jpg' %}{% endif %}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-sub-plug-id="0" data-plug-name="{{ plug.name|upper }}">{{ plug.name }}
     {% if plug.get_level_display == "beginner" %}
         <span class="badge level" style="background-color: #34D942">Débutant</span>
     {% elif plug.get_level_display == "intermediate" %}
