--- a/pyscada/laborem/templates/form_TOP10.html
+++ b/pyscada/laborem/templates/form_TOP10.html
@@ -5,56 +5,20 @@
     {% for item in form.hidden_control_items_to_true.all %}
         {% if item.active == 1 %}
             {% if item.type == 0 %}<!-- hidden form input {{ item.key }} -->
-                <div class="hidden variable-config" data-name="{{ item.name }}" data-key="{{ item.key }}" data-init-type="0" data-type="{{ item.item_type}}"></div>
-                <input type="hidden" class="form-control {{ item.web_class_str }}" name="{{ item.name }}" id="{{ item.web_id }}-value" placeholder="" value="1">
+                <div class="hidden variable-config" data-id="{{ form.web_id }}-{{ item.web_id }}-{{ uuid }}" data-name="{{ item.name }}" data-key="{{ item.key }}" data-init-type="0" data-type="{{ item.item_type}}" data-min="{{ item.min }}" data-max="{{ item.max }}" data-min-type="{{ item.min_type }}" data-max-type="{{ item.max_type }}"></div>
+                <input type="hidden" class="form-control {{ item.web_class_str }}" name="{{ item.name }}" id="{{ form.web_id }}-{{ item.web_id }}-{{ uuid }}-value" placeholder="" value="1">
             {% endif %}
         {% endif %}
     {% endfor %}
     {% for item in form.control_items.all %}
         {% if item.active == 1 %}
             {% if item.type == 0 %}<!-- form input {{ item.key }} -->
-                <div class="hidden variable-config" data-name="{{ item.name }}" data-key="{{ item.key }}" data-init-type="0" data-type="{{ item.item_type}}"></div>
-                {% if item.item_type == 'variable_property' %}<!-- VP -->
-                    {% if item.variable_property.value_class == 'BOOL' or item.variable_property.value_class == 'BOOLEAN' %}
-                        <!-- VP value {{ item.variable_property.value }} -->
-                        {% if item.variable_property.value %}
-                            <div class="input-group set_value">
-                                <input type="button" class="btn btn-success update-able write-task-btn type-bool {{ item.web_class_str }}" name="{{ item.name }}" id="{{ item.web_id }}" placeholder="" value="{{ item.name }}">
-                            </div>
-                        {% else %}
-                            <div class="input-group set_value">
-                                <input type="button" class="btn btn-default update-able write-task-btn type-bool {{ item.web_class_str }}" name="{{ item.name }}" id="{{ item.web_id }}" placeholder="" value="{{ item.name }}">
-                            </div>
-                        {% endif %}
-                    {% else %}
-                        <div class="input-group set_value">
-                            <span class="input-group-addon input-group-addon-label">{{ item.label }}</span>
-                            <input type="text" class="form-control {{ item.web_class_str }}" name="{{ item.name }}" id="{{ item.web_id }}-value" placeholder="" style="min-width:80px;">
-                            {% if item.unit %}<span class="input-group-addon">{{ item.unit }}</span>{% endif %}
-                        </div>
-                    {% endif %}
-                {% else %}<!-- Var -->
-                    {% if item.variable.value_class == 'BOOL' or item.variable.value_class == 'BOOLEAN' %}
-                        <!-- Var value {{ item.variable.value }} -->
-                        {% if item.variable.value %}
-                            <div class="input-group set_value">
-                                <input type="button" class="btn btn-success update-able write-task-btn type-bool {{ item.web_class_str }}" name="{{ item.name }}" id="{{ item.web_id }}" placeholder="" value="{{ item.name }}">
-                            </div>
-                        {% else %}
-                            <div class="input-group set_value">
-                                <input type="button" class="btn btn-default update-able write-task-btn type-bool {{ item.web_class_str }}" name="{{ item.name }}" id="{{ item.web_id }}" placeholder="" value="{{ item.name }}">
-                            </div>
-                        {% endif %}
-                    {% else %}
-                        <div class="input-group set_value">
-                            <span class="input-group-addon input-group-addon-label">{{ item.label }}</span>
-                            <input type="text" class="form-control {{ item.web_class_str }}" name="{{ item.name }}" id="{{ item.web_id }}-value" placeholder="" style="min-width:80px;">
-                            {% if item.unit %}<span class="input-group-addon">{{ item.unit }}</span>{% endif %}
-                        </div>
-                    {% endif %}
-                {% endif %}
+                {% include "control_element.html" with form=form %}
             {% endif %}
         {% endif %}
+    {% endfor %}
+    {% for dropdown in form.dropdowns.all %}
+        {% include "dropdown.html" with dropdown=dropdown form=form %}
     {% endfor %}
 
     <div class="input-group set_value">
