--- a/pyscada/laborem/templates/top_menu_left.html
+++ b/pyscada/laborem/templates/top_menu_left.html
@@ -8,15 +8,13 @@
     {% else %}
         <li><a href="#plugs"><span class="glyphicon glyphicon-cog"></span> Configuration du circuit</a></li>
         <li class="dropdown"><!-- Experiences -->
-            <a class="dropdown-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-blackboard"></span> Acquisition & Analyse <strong class="caret"></strong></a>
-            <div class="dropdown-menu" style="padding: 15px; padding-bottom: 15px; width:70%; min-width:380px;">
-                <ul>
-                    {% for experience in visible_experience_list %}
-                        <li>
-                            <a href="#{{experience.page.link_title}}">{{experience.page.title}}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
+            <a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-blackboard"></span> Acquisition & Analyse <strong class="caret"></strong></a>
+            <ul class="dropdown-menu" >
+                {% for experience in visible_experience_list %}
+                    <li>
+                        <a href="#{{experience.page.link_title}}">{{experience.page.title}}</a>
+                    </li>
+                {% endfor %}
+            </ul>
         </li>
     {% endif %}
